# atlantisbot

./: .env.example  .gitignore  LICENSE  Pipfile  Procfile  README.md  TODO.md  alembic.ini  atlantisbot.py  docker-compose.yml  makemigrations.sh  manage.py  player_activities.json  pyproject.toml  requirements.txt  rs3clansbot.py  testjsondiff.py
.github/worfklows/: ci.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 05a55165ebdd_.py  11edf236626f_.py  123fadbf95c1_.py  1e4af10787c5_.py  2ada3c1d96c9_.py  4530390a385e_.py  533f6151adf5_.py  5724929854e4_.py  654c234cca11_update_team_player_and_advlogstate.py  818d8ebcdf3f_.py  8ed9599d1b2c_.py  b02cedca3b67_.py  b0e7b0eea412_.py  cefb50c219c5_.py  d90f554d7359_.py  fd4ede70ffa4_.py
bot/: advlog.py  bot_client.py  clan_settings.json  definesettings.py  dia_de_raids.txt  embeds.json  getclan.py  merchant.json  messages.json  pvmteams.py  raids.py  rs3clansbot.py  settings.py
bot/cogs/: admin.py  adv_log.py  amigosecreto.py  api.py  authentication.py  chat.py  clan.py  clan_hiscores.py  competitions.py  dia_de_raids.txt  doacoes.py  embed_messages.py  embeds.py  error_handler.py  member.py  merchant.py  models.py  owner.py  pvm.py  raids.py  raids_day.py  raids_notif.py  roles.py  rsatlantis.py  rsworld.py  runeclan.py  teams.py  utils.py  vos.py  welcome_message.py  welcomemessage.py
bot/cogs/db/: models.py
bot/data/: activities.json  clan_settings.json  embeds.json  skills.json  team_templates.json  worlds.json
bot/db/: db.py  models.py
bot/orm/: db.py  models.py  settings.py
bot/tasks/: advlog.py  merchant.py  pvmteams.py  raids.py  update_clans.py
bot/utils/: api.py  checks.py  context.py  embeds.py  players.py  raids.py  roles.py  teams.py  tools.py
tests/: __init__.py  helpers.py  test_aplicar_aod_command.py  test_aplicar_command.py  test_atlantisbot_command.py  test_ranks_command.py
